# app/api/openapi.yaml
@@ -863,6 +863,7 @@ paths:
     post:
       description: |
         Authorizes an incoming API request by validating the provided API key.
+      operationId: authApiKey
       parameters:
       - description: The unique identifier of the service from which the API key will
           be deleted.
@@ -885,7 +886,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/_services__serviceId__key__keyId__auth_post_request'
+              $ref: '#/components/schemas/authApiKey_request'
         description: API key or token to be authorized
         required: true
       responses:
@@ -893,7 +894,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/_services__serviceId__key__keyId__auth_post_200_response'
+                $ref: '#/components/schemas/authApiKey_200_response'
           description: The request is authorized and scopes are returned
         "401":
           description: Unauthorized request
@@ -1242,7 +1243,7 @@ components:
           description: Message describing the error that occurred
           type: string
       type: object
-    _services__serviceId__key__keyId__auth_post_request:
+    authApiKey_request:
       properties:
         secret:
           description: The API key provided by the client
@@ -1257,7 +1258,7 @@ components:
           description: The API key provided by the client
           type: string
       type: object
-    _services__serviceId__key__keyId__auth_post_200_response:
+    authApiKey_200_response:
       example:
         authorized: true
         scopes:
