# app/openapi/model_auth_api_key_200_response.go
@@ -1,0 +1,28 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Payload Ops API
+ *
+ * The Payload Ops API simplifies API key management for organizations by providing powerful tools to create, manage, and monitor API access securely. It allows teams to generate scoped API keys, configure rate limits, track usage, and integrate seamlessly with existing services.
+ *
+ * API version: 1.0
+ * Contact: info@payloadops.com
+ */
+
+package openapi
+
+type AuthApiKey200Response struct {
+	Authorized bool `json:"authorized,omitempty"`
+
+	Scopes []string `json:"scopes,omitempty"`
+}
+
+// AssertAuthApiKey200ResponseRequired checks if the required fields are not zero-ed
+func AssertAuthApiKey200ResponseRequired(obj AuthApiKey200Response) error {
+	return nil
+}
+
+// AssertAuthApiKey200ResponseConstraints checks if the values respects the defined constraints
+func AssertAuthApiKey200ResponseConstraints(obj AuthApiKey200Response) error {
+	return nil
+}
